<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/product_detail_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:paddingRight="15dp"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/product_detail_name"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:textSize="?attr/font_xlarge"
            android:textColor="?attr/primaryTextColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <TextView
                android:id="@+id/product_detail_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/product_price_title"
                android:textColor="?attr/primaryTextColor"
                android:textSize="?attr/font_large"/>

            <TextView
                android:id="@+id/product_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="end"
                android:textColor="?attr/primaryTextColor"
                android:textSize="?attr/font_medium"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <TextView
                android:id="@+id/product_detail_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="?attr/primaryTextColor"
                android:text="@string/amount_detail_title"
                android:textSize="?attr/font_large"/>

            <TextView
                android:id="@+id/product_detail_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="?attr/primaryTextColor"
                android:textSize="?attr/font_medium"
                android:gravity="end" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="15dp"
            android:gravity="end">


            <TextView
                android:id="@+id/product_detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="?attr/primaryTextColor"
                android:gravity="end"
                android:textSize="?attr/font_medium"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_detail_no_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

            <TextView
                android:id="@+id/no_products_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/primaryTextColor"
                android:textSize="?attr/font_large"
                android:layout_marginBottom="@dimen/no_product_container_title_margin_bottom"
                android:text="@string/product_detail_empty" />
    </LinearLayout>

    <include layout="@layout/include_execute_action"></include>

</RelativeLayout>